Basic Impl of the Sign up

--- a/API-Gateway/API-Gateway/src/main/resources/application.yml
+++ b/API-Gateway/API-Gateway/src/main/resources/application.yml
@@ -25,4 +25,9 @@ spring:
         - id: login-api
           uri: lb://SBMS-LoginService
           predicates:
-            - Path=/api/**   
+            - Path=/api/login/**
+        - id: signup-api
+          uri: lb://SBMS-SignUp-Service
+          predicates:
+            - Path=/api/signUp/**   
+        
