--- a/SBMS-Login-Service/pom.xml
+++ b/SBMS-Login-Service/pom.xml
@@ -33,6 +33,11 @@
 	</properties>
 	<dependencies>
 		<dependency>
+           <groupId>com.brand</groupId>
+           <artifactId>SBMS-common-DTO</artifactId>
+           <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
